--- a/assets/styles/notes.css
+++ b/assets/styles/notes.css
@@ -58,7 +58,7 @@ body {
 
 #submenu-wrapper div a:hover {
 	background: #e4e4e4;
-	color: #0057ae;
+	color: #C17878;
 }
 
 #submenu-wrapper div.first a {
@@ -88,6 +88,22 @@ body {
 	display: block;
 	width: 950px;
 	margin: 0 auto;
+}
+
+#wrapper .container.contained .content {
+	border: 10px solid #ededed;
+	padding: 0px;
+	background: white;
+}
+
+.content h2 {
+	background: transparent;
+	padding: 0;
+	margin: 0;
+	font-family: Georgia;
+	color: #C17878;
+	padding: 20px;
+	border-bottom: 1px solid #ededed;
 }
 
 #footer {
