--- a/assets/styles/notes.css
+++ b/assets/styles/notes.css
@@ -51,7 +51,7 @@ body {
 	height: 23px;
 	float: right;
 	width: 75px;
-	padding: 8px 20px 6px 20px;
+	padding: 5px 20px 9px 20px;
 	border-left: 1px solid #ccc;
 	font-size: 16px;
 }
@@ -100,12 +100,22 @@ body {
 	background: #FFEDEF;
 	border: 10px solid #FFC2CA;
 	color: #C00;
+	margin-bottom: 10px;
 }
 
 #wrapper .container.contained .content.success {
 	background: #E2F9E3;
 	border: 10px solid #9C9;
 	color: #060;
+	margin-bottom: 10px;
+}
+
+input.success {
+	background: #E2F9E3;
+}
+
+input.error {
+	background: #FFEDEF;
 }
 
 .content h2 {
