--- a/assets/styles/notes.css
+++ b/assets/styles/notes.css
@@ -339,3 +339,91 @@ ol {
 ol li span {
 	font-weight: normal;
 }
+
+#uploaders {
+	text-align: center;
+	height: 110px;
+}
+
+#uploaders div.songbox {
+	text-align: left;
+	display: inline-block;
+	background-color: #EEE;
+	height: 100%;
+	width: 30%;
+	margin-right: 20px;
+	border: 1px solid #CCC;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	box-shadow: 1px 2px 6px rgba(0,0,0, 0.5);
+	-moz-box-shadow: 1px 2px 6px rgba(0,0,0, 0.5);
+	-webkit-box-shadow: 1px 2px 6px rgba(0,0,0, 0.5);
+	overflow: hidden;
+}
+
+#uploaders div.songbox h1 {
+	font-weight: normal;
+	color: #78ba91;
+	font-size: 20px;
+	background-color: transparent;
+	margin: 10px 0px 10px 13px;
+	padding: 0;
+}
+
+#uploaders div.songbox input {
+	margin-left: 13px;
+	width: 78%;
+	border: 1px solid #ccc;
+	font-size: 18px;
+	font-family: Georgia;
+	padding: 5px;
+	color: #999;
+}
+
+#uploaders div.songbox div.filecontainer {
+	width: 90%;
+	overflow: hidden;
+}
+
+#uploaders div.songbox input[name="upload"] {
+	position: relative;
+	text-align: left;
+	-moz-opacity: 0;
+	filter: alpha(opacity: 0);
+	opacity: 0;
+	z-index: 2;
+	cursor: pointer;
+}
+
+#uploaders div.songbox input[name="add"] {
+	height: 19px;
+	width: 20px;
+	background: transparent url('/assets/images/add.png') no-repeat bottom right;
+	margin: 0px 0 0 0;
+	padding: 0;
+	display: inline-block;
+	border: none;
+	cursor: pointer;
+}
+
+#uploaders div.fileinputs {
+	position: relative;
+}
+
+#uploaders div.fakefile {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+}
+
+#uploaders div.fakefile input[name="fakefile"] {
+	background: white url('/assets/images/disk-grayscale.png') no-repeat 10px center;
+	cursor: pointer;
+}
+
+#loadingAnimation {
+	display: none;
+	margin: 3px 0 0 4px;
+}
