--- a/assets/styles/notes.css
+++ b/assets/styles/notes.css
@@ -10,6 +10,7 @@ body {
 #container.notes {
 	border-bottom: 1px solid #DDD;
 	background: #f9f9f9;
+	padding-top: 32px;
 }
 
 #container.notes h1 {
@@ -19,6 +20,7 @@ body {
 	font-weight: normal;
 	font-size: 46px;
 	margin-bottom: 0px;
+	margin-top: 0;
 }
 
 #container.notes div.taglines {
@@ -79,9 +81,7 @@ body {
 }
 
 #super-duper-wrapper {
-	min-height: 100%;
 	height: auto !important;
-	height: 100%;
 	margin: 0 auto 0em;
 	background: #f4f5f5;
 }
@@ -478,4 +478,8 @@ div.bucket div.song img {
 	margin-right: 10px;
 	margin-top: 5px;
 	cursor: pointer;
+}
+
+div.fadein {
+	opacity: 0;
 }
